2005-10-19  Roland Dreier  <roland@cisco.com>

	* src/cmd.c (ibv_cmd_req_notify_cq): Correct how we pass
	solicited_only flag into the kernel.

2005-10-13  Roland Dreier  <roland@cisco.com>

	* include/infiniband/driver.h, src/cmd.c, src/libibverbs.map: Add
	command functions for calling new kernel commands.

	* include/infiniband/verbs.h: Add qp_type to struct ibv_qp so that
	we know when we're posting a send on a UD QP, and add kernel
	handle member to struct ibv_ah so we can handle drivers that do
	create AH and destroy AH operations in the kernel.
	
	* include/infiniband/kern-abi.h: Add new command structures for
	poll CQ, request notification for CQ, post send, post receive,
	post SRQ receive, create AH and destroy AH commands.  These will
	be used by the PathScale userspace driver.

2005-10-12  Roland Dreier  <roland@cisco.com>

	* examples/srq_pingpong.c (main): Zero out unused entries in
	my_dest array to avoid string overflows when we send to the other
	side.

2005-10-09  Roland Dreier  <roland@cisco.com>

	* examples/devinfo.c (print_hca_cap): Only print max_mr_size and
	page_size_cap if verbose is set.

2005-10-05  Roland Dreier  <roland@cisco.com>

	* src/cmd.c (ibv_cmd_modify_srq): Add function for marshalling
	modify SRQ command.

2005-09-29  Roland Dreier  <roland@cisco.com>

	* examples/devinfo.c (print_hca_cap): Get rid of formatting of
	firmware version in what should be device-independent code.

	* include/infiniband/driver.h, include/infiniband/verbs.h,
	src/cmd.c (ibv_cmd_query_device): Change firmware version in
	struct ibv_device_attr to be a string formatted by device-specific
	library.

2005-09-25  Roland Dreier  <roland@cisco.com>

	* examples/rc_pingpong.c, examples/srq_pingpong.c,
	examples/uc_pingpong.c, examples/ud_pingpong.c: Update to match
	new completion channel and CQ creation API.

	* include/infiniband/driver.h, include/infiniband/verbs.h,
	src/device.c, src/ibverbs.h, src/verbs.c, src/cmd.c: Add notion of